# autorelease

./: CHANGELOG.md  body.md  pyproject.toml
.github/workflows/: ci.yml  create-release-pr.yml
src/autorelease/: __init__.py
tests/: test_main.py
