[project]
name = "autorelease"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Jens Peder Meldgaard", email = "jenspederm@gmail.com" }]
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["pytest>=8.3.5", "pytest-cov>=6.1.1", "ruff>=0.11.8"]


[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    "--cov-report=term",
    "--cov-report=xml:coverage.xml",
    "--cov=autorelease",
    "-ra",
    "-vv",
    "-s",
    # "-n=auto",
    # "--dist=loadfile",
]

[tool.coverage.report]
fail_under = 0
show_missing = true
exclude_lines = ["pragma: no cover", "raise NotImplementedError"]

[tool.ruff]
line-length = 120
show-fixes = true

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
# See more here: https://docs.astral.sh/ruff/rules/
select = ["D", "D401", "E", "F", "I", "T201", "UP", "PT"]
ignore = [
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D106",
    "D107",
    "D417",
    "E501",
    "UP006",
    "UP007",
    "UP035",
]
exclude = ["notebooks/*"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "UP"]

[tool.ruff.lint.pydocstyle]
convention = "google"
